Type wizard display settings